style fix for pwa on mobile

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
+
+body {
+	overscroll-behavior-y: contain;
+}
